trynna fix the index spacing - get to it later

--- a/css/index.css
+++ b/css/index.css
@@ -47,8 +47,7 @@ nav {
 nav ul {
   list-style-type: none;
   margin: 0;
-   padding-right: 85px;
-   padding-left: 100px;
+  padding: 0;
 }
 
 li {
@@ -63,7 +62,7 @@ nav ul li {
 nav ul li a {
   display: block;
   padding: 5px 10px;
-  color: #fff;
+  color: #f5f5f5;
   text-decoration: none;
   border-radius: 5px;
 }
@@ -71,6 +70,7 @@ nav ul li a {
 nav ul li a:hover {
   background-color: #555;
 }
+
 
 h6.footer {
   color: #888;
